<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:rowCount="4"
    android:columnCount="3"
    android:id="@+id/number_layout">

    <Button
        android:id="@+id/button_7"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/_7" />

    <Button
        android:id="@+id/button_8"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/_8" />

    <Button
        android:id="@+id/button_9"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/_9" />

    <Button
        android:id="@+id/button_4"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/_4" />

    <Button
        android:id="@+id/button_5"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/_5" />

    <Button
        android:id="@+id/button_6"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/_6" />

    <Button
        android:id="@+id/button_1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/_1" />

    <Button
        android:id="@+id/button_2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/_2" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/_3" />

    <Button
        android:id="@+id/button_0"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:layout_columnSpan="2"
        android:text="@string/_0" />

    <Button
        android:id="@+id/button_dot"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/_Dot" />
</GridLayout>