<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:id="@+id/function_button_layout"
    android:rowCount="4">


    <Button
        android:id="@+id/button_add"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_row="1"
        android:layout_column="0"
        android:background="@drawable/function_styles"
        android:layout_margin="2dp"
        android:text="@string/add" />

    <Button
        android:id="@+id/button_subtract"
        android:layout_width="70dp"
        android:layout_row="1"
        android:layout_column="1"
        android:background="@drawable/function_styles"
        android:layout_height="50dp"
        android:layout_margin="2dp"
        android:text="@string/subtract" />

    <Button
        android:id="@+id/button_divide"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_margin="2dp"
        android:background="@drawable/function_styles"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/divide" />

    <Button
        android:id="@+id/button_multiply"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_margin="2dp"
        android:layout_row="2"
        android:background="@drawable/function_styles"
        android:layout_column="1"
        android:text="@string/multiply" />

    <Button
        android:id="@+id/button_equal"
        android:layout_width="144dp"
        android:layout_height="50dp"
        android:layout_columnSpan="2"
        android:background="@drawable/function_styles"
        android:layout_margin="2dp"
        android:layout_row="3"
        android:layout_column="0"
        android:text="@string/equals" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="70dp"
        android:background="@drawable/function_styles"
        android:layout_height="50dp"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_margin="2dp"
        android:layout_row="0"
        android:text="@string/del" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_margin="2dp"
        android:layout_row="0"
        android:background="@drawable/ac_styles"
        android:text="@string/ac" />

</GridLayout>