<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:layout_height="60dp"
    android:orientation="horizontal"
    app:layout_constraintTop_toBottomOf="@+id/numbersText"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Button
        android:id="@+id/memory_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/memory_clear" />

    <Button
        android:id="@+id/memory_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/memory_add" />

    <Button
        android:id="@+id/memory_subtract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/memory_subtract" />

    <Button
        android:id="@+id/memory_recall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/memory_recall" />
</LinearLayout>